tests/testing_data/anonymized_testing_data/invalid_data/mult_series_uid/1.3.12.2.1107.5.1.4.3024295249861856527476734919304407350-1-1-mvhslo.dcm
version https://git-lfs.github.com/spec/v1
oid sha256:c0b3bee613d2a9fb4f4c4faf7fda95662ad7acd714cea7968ba3244f9ccaf4f5
size 64880
